fixed overflow

--- a/japan/style.css
+++ b/japan/style.css
@@ -87,12 +87,14 @@ a:hover {
 @media screen and (max-width: 768px) {
 	.container {
 		width: 90%;
+		overflow-x: hidden;
 	}
 }
 
 @media screen and (max-width: 480px) {
 	.container {
 		width: 95%;
+		overflow-x: hidden;
 	}
 }
 
